# craft-cli

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  HACKING.md  HACKING.rst  HOWTO_RELEASE.md  Makefile  README.md  README.rst  SECURITY.md  common.mk  completion_example.py  examples.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/workflows/: automatic-doc-checks.yml  docs.yaml  qa.yaml  release-publish.yaml  security-scan.yaml  tests.yaml  tics.yaml
craft_cli/: __init__.py  _logs.py  bash_completion.j2.sh  completion.py  dispatcher.py  errors.py  helptexts.py  messages.py  printer.py  pytest_plugin.py  utils.py
craft_cli/_rs/: __init__.pyi  emitter.pyi  errors.pyi  progress.pyi  streams.pyi  utils.pyi
craft_cli/completion/: __init__.py  __main__.py  bash_completion.sh.j2  completion.py
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wokeignore  .wordlist.txt  Makefile  changelog.rst  conf.py  custom_conf.py  explanations.rst  howtos.rst  index.rst  redirects.txt  reference.rst  requirements.txt  tutorials.rst
docs/.sphinx/: requirements.txt  spellingcheck.yaml
docs/autodoc/: craft_cli.messages.template
docs/explanation/: command-groups.rst  emit-mode.rst  global-args.rst  hidden-common-commands.rst  index.rst  log-management.rst  presenting-messages.rst
docs/how-to/: change-logfile.rst  change-return-code.rst  create-hidden-options.rst  raise-helpful-errors.rst  set-default-command.rst  unit-test-with-emitter.rst  use-global-args.rst
docs/how-to-guides/: change-logfile.rst  change-return-code.rst  create-hidden-options.rst  index.rst  raise-helpful-errors.rst  set-default-command.rst  unit-test-with-emitter.rst  use-completion.rst  use-global-args.rst  use-the-completion-module.rst  yield-terminal-control.rst
docs/howto/: index.rst  use-global-args.rst  yield-terminal-control.rst
docs/reference/: index.rst
docs/reuse/: links.txt
docs/tutorials/: index.rst  run-a-command-application.rst
rust/: craft_cli_utils.rs  emitter.rs  lib.rs  printer.rs  test_utils.rs
src/: craft_cli_utils.rs  emitter.rs  errors.rs  lib.rs  logs.rs  printer.rs  progress.rs  streams.rs  test_utils.rs  utils.rs
tests/: conftest.py  factory.py  test_pytest_plugin.py
tests/integration/: test_completion.py  test_logging.py  test_messages_integration.py
tests/integration/test_completion/: expected_script.sh
tests/unit/: test_completion.py  test_dispatcher.py  test_errors.py  test_help.py  test_messages_emitter.py  test_messages_helpers.py  test_messages_integration.py  test_messages_printer.py  test_messages_stream_cm.py  test_printer.py  test_utils.py
