[metadata]
name = craft-cli
version = attr: craft_cli.__version__
description = "Command Line Interface"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/craft-cli
project_urls =
    Documentation = https://craft-cli.readthedocs.io/en/latest/
    Source = https://github.com/canonical/craft-cli.git
    Issues = https://github.com/canonical/craft-cli/issues
author = Canonical Ltd.
author_email = snapcraft@lists.snapcraft.io
license = GNU Lesser General Public License v3 (LGPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    platformdirs
    pydantic
    pyyaml
    pywin32; sys_platform == "win32"

[options.package_data]
craft_cli = py.typed

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    sphinx-pydantic
    sphinx-rtd-theme
release =
    twine
    wheel
test =
    black
    codespell
    coverage
    flake8
    isort
    mypy
    pydocstyle
    pylint
    pylint-fixme-info
    pylint-pytest
    pytest
    pytest-mock
    pytest-subprocess
    tox
    types-pyyaml
    types-requests
    types-setuptools
dev =
    autoflake
    %(doc)s
    %(release)s
    %(test)s

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[codespell]
quiet-level = 3
skip = ./docs/_build,.direnv,.git,.mypy_cache,.pytest_cache,.venv,__pycache__,venv

[flake8]
exclude = .direnv .git .mypy_cache .pytest_cache .venv __pycache__ venv
max-line-length = 99
# E501 line too long
extend-ignore = E501

[mypy]
python_version = 3.8
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[pydocstyle]
# D105 Missing docstring in magic method (reason: magic methods already have definitions)
# D107 Missing docstring in __init__ (reason: documented in class docstring)
# D203 1 blank line required before class docstring (reason: pep257 default)
# D213 Multi-line docstring summary should start at the second line (reason: pep257 default)
# D215 Section underline is over-indented (reason: pep257 default)
ignore = D105, D107, D203, D213, D215

[aliases]
test = pytest

[tool:pytest]
